--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -7,7 +7,7 @@
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-
+    
     <title>Nosotros</title>
 
     <!--favicon-->
@@ -19,22 +19,29 @@
 </head>
 
     <body>
-        <div class="grid-container">
+
             <header id="header" class="header">
                     
-                <nav class="nav">
-                    <ul>
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="nosotros.html">Nosotros</a></li>
-                        <li><a href="">Clases</a>
-                            <ul>
-                                <a href="clases_cr4863.html">Costa Rica 4863</a>
-                                <a href="clases_cr6043.html">Costa Rica 6043</a>
+                <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Inicio</a></li>
+                                <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                                <li class="nav-item"><a class="nav-link" href="">Clases</a>
+                                    <ul>
+                                        <a class="nav-link" href="clases_cr4863.html">Costa Rica 4863</a>
+                                        <a class="nav-link" href="clases_cr6043.html">Costa Rica 6043</a>
+                                    </ul>
+                                </li>
+                                <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                                <li class="nav-item"><a class="nav-link disabled" href="dar_clases.html">Dar clases</a></li>
                             </ul>
-                        </li>
-                        <li><a href="contacto.html">Contacto</a></li>
-                        <li><a href="dar_clases.html">Dar clases</a></li>
-                    </ul>
+                        </div>
+                    </div>
                 </nav>
 
             </header>
@@ -78,10 +85,10 @@
                 </div>        
             </footer>
 
-
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
             crossorigin="anonymous"></script>
-        </div>
+
     </body>
 </html>
