menu hamburguesa mejorado

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
 
-        <section>
+        <section class="section_cla">
             <div class="contenedor2">
                 <h2>Comentarios de alumn@s</h2>
                 <!--Container + Row + Col-->
@@ -83,7 +83,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="section_cla2">
             <div class="contenedor2">
                 <h2>Beneficios de hacer padel</h2>
                 <ul>
