--- a/paginas/clases_cr6043.html
+++ b/paginas/clases_cr6043.html
@@ -39,26 +39,26 @@
             </header>
 
 
-            <main>
+            <main class="main">
                 <div class="contenedor">
                     <h1 class="titulo">Clases en Costa Rica 6043</h1>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9946243661884!2d-58.44174462385604!3d-34.57900257296325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb594a7231633%3A0x4ace68428494c0f4!2sCosta%20Rica%206043%2C%20C1414BTM%20CABA!5e0!3m2!1ses-419!2sar!4v1684123086073!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </main>
-            <section class="section">
+            <section class="section_cla">
                 <div class="contenedor2">
                     <h2>Modalidad de clases</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo reprehenderit, delectus obcaecati exercitationem tempora, pariatur corporis nesciunt assumenda amet ut officia voluptate dolorem dolor maxime molestiae, deserunt libero nemo vero eligendi eos. Dolorum nobis ipsam ad voluptate laborum! Aliquid quae culpa quo qui ratione ex earum, asperiores officiis nobis suscipit ab. Dolorem excepturi nihil consequuntur quae. Doloremque sint voluptas, ut quas aliquid adipisci ratione nemo repudiandae ipsam? Recusandae quod reiciendis doloremque asperiores vel temporibus nemo, perferendis voluptatem fugiat atque odio! Pariatur temporibus praesentium laboriosam at suscipit ratione facilis soluta, dolor aliquam quos eveniet aut non voluptatem ut et nisi dolorem.</p>
                 </div>
             </section>
-            <section class="section2">
+            <section class="section_cla2">
                 <div class="contenedor">
                     <h3>¡Te esperamos!</h3>
                     <button><a class="letra_boton"href="contacto.html">Tomar clases</a></button>
                 </div>
             </section>
 
-            <footer >
+            <footer class="footer">
                 <div class="contenedor3">
                     <ul>
                         <li>
