--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -22,14 +22,14 @@
 
             <header id="header" class="header">
                     
-                <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <nav class="navbar navbar-expand-lg nav">
                     <div class="container-fluid">
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
-                                <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Inicio</a></li>
+                                <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Inicio</a></li>
                                 <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
                                 <li class="nav-item"><a class="nav-link" href="">Clases</a>
                                     <ul>
@@ -38,7 +38,7 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-                                <li class="nav-item"><a class="nav-link disabled" href="dar_clases.html">Dar clases</a></li>
+                                <li class="nav-item"><a class="nav-link" href="dar_clases.html">Dar clases</a></li>
                             </ul>
                         </div>
                     </div>
