--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -19,7 +19,7 @@
 </head>
 
     <body>
-
+        <div class="grid-container">
             <header id="header" class="header">
                     
                 <nav class="navbar navbar-expand-lg nav">
@@ -31,7 +31,7 @@
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Inicio</a></li>
                                 <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                                <li class="nav-item"><a class="nav-link" href="">Clases</a>
+                                <li><a href="">Clases</a>
                                     <ul>
                                         <a class="nav-link" href="clases_cr4863.html">Costa Rica 4863</a>
                                         <a class="nav-link" href="clases_cr6043.html">Costa Rica 6043</a>
@@ -89,6 +89,6 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
             crossorigin="anonymous"></script>
-
+        </div>
     </body>
 </html>
