--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -31,7 +31,7 @@
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Inicio</a></li>
                                 <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                                <li><a href="">Clases</a>
+                                <li class="nav-item"><a class="nav-link" href="">Clases</a>
                                     <ul>
                                         <a class="nav-link" href="clases_cr4863.html">Costa Rica 4863</a>
                                         <a class="nav-link" href="clases_cr6043.html">Costa Rica 6043</a>
