--- a/index.html
+++ b/index.html
@@ -23,21 +23,31 @@
     
     <header id="header" class="header">
 
-        <nav class="nav">
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="paginas/nosotros.html">Nosotros</a></li>
-                <li><a href="">Clases</a>
-                    <ul>
-                        <a href="paginas/clases_cr4863.html">Costa Rica 4863</a>
-                        <a href="paginas/clases_cr6043.html">Costa Rica 6043</a>
-                    </ul>
-                </li>
-                <li><a href="paginas/contacto.html">Contacto</a></li>
-                <li><a href="paginas/dar_clases.html">Dar clases</a></li>
-            </ul>
-        </nav>
-
+            <nav class="navbar navbar-expand-lg nav">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="paginas/nosotros.html">Nosotros</a></li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    Clases
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li> <a class="nav-link" href="paginas/clases_cr4863.html">Costa Rica 4863</a></li>
+                                    <li><a class="nav-link" href="paginas/clases_cr6043.html">Costa Rica 6043</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="paginas/contacto.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link" href="paginas/dar_clases.html">Dar clases</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
     </header>
 
 
