--- a/paginas/clases_cr6043.html
+++ b/paginas/clases_cr6043.html
@@ -19,21 +19,32 @@
 
     <body class="grid-container">
 
-        <header id="header">
+        <header id="header" class="header">
                 
-            <nav class="nav">
-                <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="">Clases</a>
-                        <ul>
-                            <a href="clases_cr4863.html">Costa Rica 4863</a>
-                            <a href="clases_cr6043.html">Costa Rica 6043</a>
+            <nav class="navbar navbar-expand-lg nav">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    Clases
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li> <a class="nav-link" href="clases_cr4863.html">Costa Rica 4863</a></li>
+                                    <li><a class="nav-link" href="clases_cr6043.html">Costa Rica 6043</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link" href="dar_clases.html">Dar clases</a></li>
                         </ul>
-                    </li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                    <li><a href="dar_clases.html">Dar clases</a></li>
-                </ul>
+                    </div>
+                </div>
             </nav>
 
         </header>
@@ -42,7 +53,7 @@
         <main class="main">
             <div class="contenedor">
                 <h1 class="titulo">Clases en Costa Rica 6043</h1>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9946243661884!2d-58.44174462385604!3d-34.57900257296325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb594a7231633%3A0x4ace68428494c0f4!2sCosta%20Rica%206043%2C%20C1414BTM%20CABA!5e0!3m2!1ses-419!2sar!4v1684123086073!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9946243661884!2d-58.44174462385604!3d-34.57900257296325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb594a7231633%3A0x4ace68428494c0f4!2sCosta%20Rica%206043%2C%20C1414BTM%20CABA!5e0!3m2!1ses-419!2sar!4v1684123086073!5m2!1ses-419!2sar" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </main>
         <section class="section_cla">
@@ -70,6 +81,7 @@
             </div>        
         </footer>
         
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
