--- a/paginas/dar_clases.html
+++ b/paginas/dar_clases.html
@@ -16,43 +16,54 @@
         <link rel="stylesheet" href="../css/style.css">
     </head>
 
-    <body>
-        <header id="header">
+    <body class="grid-container">
+        <header id="header" class="header">
                 
-            <nav class="nav">
-                <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="">Clases</a>
-                        <ul>
-                            <a href="clases_cr4863.html">Costa Rica 4863</a>
-                            <a href="clases_cr6043.html">Costa Rica 6043</a>
+            <nav class="navbar navbar-expand-lg nav">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    Clases
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li> <a class="nav-link" href="clases_cr4863.html">Costa Rica 4863</a></li>
+                                    <li><a class="nav-link" href="clases_cr6043.html">Costa Rica 6043</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link" href="dar_clases.html">Dar clases</a></li>
                         </ul>
-                    </li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                    <li><a href="dar_clases.html">Dar clases</a></li>
-                </ul>
+                    </div>
+                </div>
             </nav>
 
         </header>
 
 
 
-        <main>
+        <main class="main">
             <div class="contenedor">
                 <h1 class="titulo">Trabaja con nosotros</h1>
                 <img class="grande2" src="../imagenes/images.jpg" alt="padel" sizes="16x16">
             </div>
         </main>
 
-        <section>
+        <section class="section_cla">
             <div class="contenedor2">
                 <h2>¿Qué buscamos?</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo reprehenderit, delectus obcaecati exercitationem tempora, pariatur corporis nesciunt assumenda amet ut officia voluptate dolorem dolor maxime molestiae, deserunt libero nemo vero eligendi eos. Dolorum nobis ipsam ad voluptate laborum! Aliquid quae culpa quo qui ratione ex earum, asperiores officiis nobis suscipit ab. Dolorem excepturi nihil consequuntur quae. Doloremque sint voluptas, ut quas aliquid adipisci ratione nemo repudiandae ipsam? Recusandae quod reiciendis doloremque asperiores vel temporibus nemo, perferendis voluptatem fugiat atque odio! Pariatur temporibus praesentium laboriosam at suscipit ratione facilis soluta, dolor aliquam quos eveniet aut non voluptatem ut et nisi dolorem.</p>
             </div>
         </section>
 
-        <section>
+        <section class="section5">
             <div class="contenedor2">
                 <h3>¡Unite a nuestro equipo!</h3>
                 <button><a class="letra_boton"href="contacto.html">Postularse</a></button>
@@ -60,7 +71,7 @@
 
         </section>   
         
-        <footer >
+        <footer class="footer">
             <div class="contenedor3">
                 <ul>
                     <li>
